# ultrasmall

install/: local_setup.sh  setup.sh
install/msg05_base/share/msg05_base/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/msg05_base/share/msg05_base/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_msg05_base__rosidl_generator_cExport-noconfig.cmake  export_msg05_base__rosidl_generator_cExport.cmake  export_msg05_base__rosidl_generator_cppExport.cmake  export_msg05_base__rosidl_generator_pyExport-noconfig.cmake  export_msg05_base__rosidl_generator_pyExport.cmake  export_msg05_base__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_msg05_base__rosidl_typesupport_fastrtps_cExport.cmake  export_msg05_base__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_msg05_base__rosidl_typesupport_fastrtps_cppExport.cmake  msg05_baseConfig.cmake  msg05_base__rosidl_typesupport_cExport-noconfig.cmake  msg05_base__rosidl_typesupport_cExport.cmake  msg05_base__rosidl_typesupport_cppExport-noconfig.cmake  msg05_base__rosidl_typesupport_cppExport.cmake  msg05_base__rosidl_typesupport_introspection_cExport-noconfig.cmake  msg05_base__rosidl_typesupport_introspection_cExport.cmake  msg05_base__rosidl_typesupport_introspection_cppExport-noconfig.cmake  msg05_base__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/msg05_base/share/msg05_base/msg/: BoundingBoxPoses.msg  Details.idl  DrivingTarget.idl  GroupStatusCmd.idl  Image.idl  MissionResults.idl  OCMPMissionPlan.idl  OrderTopic.idl  PlatformRegistration.idl  PlatformRegistration.msg  PlatformResult.idl  PlatformResult.msg  PlatformState.idl  SensorInfo.msg  SiteInfo.msg  Vector3F32.idl  Vector3I16.idl
install/msg05_base/share/msg05_base/srv/: AllocSwarmGroups.srv  OrderService_Response.msg  PlatformRegistrationInfo.idl  PlatformRegistrationInfo_Request.msg
install/use_case_one/lib/use_case_one/: grouping  mp  pi
install/use_case_one/share/use_case_one/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/use_case_one/share/use_case_one/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_use_case_one__rosidl_generator_cExport-noconfig.cmake  export_use_case_one__rosidl_generator_cExport.cmake  export_use_case_one__rosidl_generator_cppExport.cmake  export_use_case_one__rosidl_generator_pyExport-noconfig.cmake  export_use_case_one__rosidl_generator_pyExport.cmake  export_use_case_one__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_use_case_one__rosidl_typesupport_fastrtps_cExport.cmake  export_use_case_one__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_use_case_one__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  use_case_oneConfig.cmake  use_case_one__rosidl_typesupport_cExport-noconfig.cmake  use_case_one__rosidl_typesupport_cExport.cmake  use_case_one__rosidl_typesupport_cppExport-noconfig.cmake  use_case_one__rosidl_typesupport_cppExport.cmake  use_case_one__rosidl_typesupport_introspection_cExport-noconfig.cmake  use_case_one__rosidl_typesupport_introspection_cExport.cmake  use_case_one__rosidl_typesupport_introspection_cppExport-noconfig.cmake  use_case_one__rosidl_typesupport_introspection_cppExport.cmake
install/use_case_one/share/use_case_one/srv/: Grouping.idl  Grouping.srv  Grouping_Request.msg  Grouping_Response.msg
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/msg05_base/share/msg05_base/: package.bash  package.zsh
src/log/: latest_build
src/msg05_base/: CMakeLists.txt  package.xml
src/msg05_base/msg/: BoundingBoxPose.msg  BoundingBoxPoses.msg  Details.msg  DrivingPose.msg  DrivingTarget.msg  Error.msg  Group.msg  Groups.msg  Image.msg  MissionResultsSequence.msg  OcMpMissionPlan.msg  PlatformState.msg  PlatformType.msg  SensorInfoSequence.msg  SwarmGroups.msg
src/msg05_base/src/: PlatformRegistrationInfo_client.cpp  PlatformRegistrationInfo_server.cpp
src/msg05_base/srv/: OrderService.srv
src/use_case_one/: CMakeLists.txt  commanfile  package.xml
src/use_case_one/src/: grouping_client.cpp  grouping_server.cpp
(+569 files in other folders)
